Личный проект: начинаем разметку

--- a/САЙТ NERDS/index.html
+++ b/САЙТ NERDS/index.html
@@ -10,7 +10,6 @@
     <header>
         <nav>
             <a href=""><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a>
-        </a>
         <ul>
           <li><a href="info.html">Студия</a></li>
           <li><a href="clients.html">Клиенты</a></li>
@@ -51,7 +50,7 @@
                 <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
                 <p>Исповедуем принципы минимализма и чистоты.Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
                <ul>
-                    <h3>Выполняем заказы на разработку</h3>
+                    <li>Выполняем заказы на разработку</li>
                     <li>Веб-сайтов любой сложности</li>
                     <li>Мобильных приложений для iOS и Android</li>
                     <li>Слайд-шоу и видео для корпоративных презентаций</li>
@@ -59,7 +58,7 @@
         </section>
         <section>
             <h2 hidden>Преимущества</h2>
-            <figure></figure>
+            <figure>
             <a href="index.html"><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a></figure>
             <p>C 2004 года любим точность во всем:</p>
             <ul>
