--- a/САЙТ NERDS/catalog.html
+++ b/САЙТ NERDS/catalog.html
@@ -1,109 +1,104 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Веб-студия Nerds</title>
+    <title>студия Nerds</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html"><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a>
-                <ul>
-                <li><a href="info.html">Студия</a></li>
-                <li><a href="clients.html">Клиенты</a></li>
-                <li><a href="catalog.html">Магазин</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <ul>
-                <li>
-                    <button type="button">Корзина</button>
-                </li>
-            </ul>
-        </nav>
+  <header>
+    <nav>
+      <a href="index.html"><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a>
+        <ul>
+          <li><a href="info.html">Студия</a></li>
+          <li><a href="clients.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><button type="button">Корзина</button></li>
+        </ul>
+      </nav>
         <h1>Магазин готовых шаблонов</h1>
-    </header>
-    <main>
-        <section>
-            <h2>СЕТКА:</h2>
-            <ul>
-                <li>Адаптивная</li>
-                <li>Фиксированная</li>
-                <li>Резиновая</li>
-            </ul>
+  </header>
+  <main>
+    <section>
+      <h2>СТОИМОСТЬ:</h2>
+        <ul>
+          <li><img src="img/slider.svg" width="368" height="204" alt="Слайдер"></li>
+          <li></li>
+        </ul>
+    </section>
+    <section>
+      <h2>СОРТИРОВАТЬ:</h2>
+        <ul>
+          <li>ПО ЦЕНЕ</li>
+          <li>ПО ТИПУ</li>
+          <li>ПО НАЗВАНИЮ</li>
+        </ul>
+          <button type="button"><img src="img/button-down" width="100" height="100" alt="Кнопка вниз"/></button>
+          <button type="button"><img src="img/button-up" width="100" height="100" alt="Кнопка вверх "/></button>
+      </section>
+      <section>
+        <h2>СЕТКА:</h2>
+          <ul>
+            <li>Адаптивная</li>
+            <li>Фиксированная</li>
+            <li>Резиновая</li>
+          </ul>
             <h2>ОСОБЕННОСТИ:</h2>
-            <ul>
-                <li>Слайдер</li>
-                <li>Блок преимуществ</li>
-                <li>Новости</li>
-                <li>Галерея</li>
-                <li>корзина</li>
-            </ul>
+          <ul>
+            <li>Слайдер</li>
+            <li>Блок преимуществ</li>
+            <li>Новости</li>
+            <li>Галерея</li>
+            <li>корзина</li>
+          </ul>
             <button type="button">Показать</button>
         </section>
         <section>
-            <h2>Шаблоны</h2>
+          <h2>Шаблоны</h2>
             <ul>
-                <li>
-                    <a href="catalog-item">
-                        <img src="img/product-1"
-                             width="100" height="100" alt="сайт SEDONA " />
-                    </a>
-                </li>
-                <li>
-                    <a href="catalog-item">
-                        <img src="img/product-2"
-                             width="100" height="100" alt="сайт PINK " />
-                    </a>
-                </li>
-                <li>
-                    <a href="catalog-item">
-                        <img src="img/product-3"
-                             width="100" height="100" alt="сайт BORODINSKI " />
-                    </a>
-                </li>
-                <li>
-                    <a href="catalog-item">
-                        <img src="img/product-3"
-                             width="100" height="100" alt="сайт MISHKA " />
-                    </a>
-                </li>
-                <li>
-                    <a href="catalog-item">
-                        <img src="img/product-3"
-                             width="100" height="100" alt="сайт УЧЕБА " />
-                    </a>
-                </li>
-                <li>
-                    <a href="catalog-item">
-                        <img src="img/product-3"
-                             width="100" height="100" alt="сайт КВАСТ " />
-                    </a>
-                </li>
+              <li><a href="catalog-item"><img src="img/product-1" width="100" height="100" alt="сайт SEDONA " /></a></li>
+              <li><a href="catalog-item"><img src="img/product-2" width="100" height="100" alt="сайт PINK " /></a></li>
+              <li><a href="catalog-item"><img src="img/product-3" width="100" height="100" alt="сайт BORODINSKI " /></a></li>
+              <li><a href="catalog-item"><img src="img/product-4" width="100" height="100" alt="сайт MISHKA " /></a></li>
+              <li><a href="catalog-item"><img src="img/product-5" width="100" height="100" alt="сайт УЧЕБА " /></a></li>
+              <li><a href="catalog-item"><img src="img/product-6" width="100" height="100" alt="сайт КВАСТ " /></a></li>
             </ul>
             <ul>
-                <li><a>1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">Следующая</a></li>
+              <li><a>1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">Следующая</a></li>
             </ul>
+        </section>
+        <section>
+          <h2 hidden>Наши контакты</h2>
+            <h3>NERDS DISIGN STUDIO</h3>
+              <ul>
+                <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                <li>тел. +7(812)275-75-75</li>
+              </ul>
+                <button type="button">Напишите нам</button>
+        </section>
+        <section>
+          <h2 hidden>Карта</h2>
+            <figure><a href="#"><img src="img/Map.svg" width="100" height="100" alt="Карта"></a></figure>
         </section>
     </main>
     <footer>
-        <div>
-            <ul>
-                <li><a href='#'>Вконтакте</a></li>
-                <li><a href='#'>Фейсбук</a></li>
-                <li><a href='#'>Инстаграм</a></li>
-            </ul>
-        </div>
-        <div>
-            <p>
-                Давайте дружить, зто выгодно! <br>
-                Скидка  10% для друзей из социальных сетей.
-            </p>
-        </div>
+      <div>
+        <ul>
+          <li><a href='#'>Вконтакте</a></li>
+          <li><a href='#'>Фейсбук</a></li>
+          <li><a href='#'>Инстаграм</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>Давайте дружить, зто выгодно!<br>Скидка  10% для друзей из социальных сетей.</p>
+      </div>
     </footer>
 </body>
 </html>
