--- a/САЙТ NERDS/index.html
+++ b/САЙТ NERDS/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <a href=""><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a>
+      <a href=""><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
        <ul>
         <li><a href="info.html">Студия</a></li>
         <li><a href="clients.html">Клиенты</a></li>
@@ -17,6 +17,7 @@
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul>
+        <li><a><img src="img/basket-icon.svg" width="15" height="15" alt="Иконка корзины"></a></li>
         <li><button type="button">Корзина</button></li>
       </ul>
     </nav>
@@ -25,6 +26,7 @@
     <h1 hidden>Веб студия NERDS</h1>
       <section>
         <h2 hidden>Cлайдер</h2>
+        <a><img src="img/slide-picture.png" width="698" height="413" alt="Слайд1"></a>
           <h2>Долго, дорого, скрупулезно.</h2>
            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
              <a href="#">Узнать больше</a>
@@ -32,15 +34,15 @@
       <section>
         <h2 hidden>ПРОДУКТЫ</h2>
           <ul>
-            <li><img src="img/website-logo.svg" width="100" height="100" alt="Веб-сайты">
+            <li><img src="img/advantage-picture-red.png" width="300" height="146" alt="Веб-сайты">
               <h2>ВЕБ-САЙТЫ</h2>
                 <p>Мир никогда не будет прежним когда вы увидите ваш сайт!</p>
                   <button type="button">Заказать</button></li>
-            <li><img src="img/app-logo.svg" width="100" height="100" alt="Приложения">
+            <li><img src="img/advantage-picture-green.png" width="300" height="146" alt="Приложения">
               <h2>ПРИЛОЖЕНИЯ</h2>
                 <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                   <button type="button">Заказать</button></li>
-            <li><img src="img/pres-logo.svg" width="100" height="100" alt="Презентации">
+            <li><img src="img/advantage-picture-yellow.png" width="300" height="146" alt="Презентации">
               <h2>ПРЕЗЕНТАЦИИ</h2>
                 <p>Вы даже не подозреваете на сколько вы изумительны!</p>
                   <button type="button">Заказать</button></li>
@@ -59,7 +61,7 @@
         </section>
         <section>
           <h2 hidden>Преимущества</h2>
-            <figure><a href="index.html"><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a></figure>
+            <figure><a href="index.html"><img src="img/nerds-picture.png" width="360" height="208" alt="Логотип студии Nerds"></a></figure>
               <p>C 2004 года любим точность во всем:</p>
                 <ul>
                   <li>146% <br> Уровень самоотдачи</li>
@@ -70,10 +72,10 @@
         <section>
           <h2 hidden>Наши проекты</h2>
             <ul>
-              <li><a href="#"><img src="img/HTML-Academy-logo.svg" width="100" height="100" alt="Логотип HTML-Academy"></a></li>
-              <li><a href="#"><img src="img/Borodinski-logo.svg" width="100" height="100" alt="Логотип Borodinski"></a></li>
-              <li><a href="#"><img src="img/Pink-logo.svg" width="100" height="100" alt="Логотип Pink"></a></li>
-              <li><a href="#"><img src="img/Mishka-logo.svg" width="100" height="100" alt="Логотип Mishka"></a></li>
+              <li><a href="#"><img src="img/htmlacademy-logo.png" width="199" height="68" alt="Логотип HTML-Academy"></a></li>
+              <li><a href="#"><img src="img/borodinski-logo.png" width="209" height="90" alt="Логотип Borodinski"></a></li>
+              <li><a href="#"><img src="img/pink-logo.png" width="185" height="52" alt="Логотип Pink"></a></li>
+              <li><a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Логотип Mishka"></a></li>
             </ul>
         </section>
         <section>
@@ -87,15 +89,15 @@
         </section>
         <section>
           <h2 hidden>Карта</h2>
-          <figure><a href="#"><img src="img/Map.svg" width="100" height="100" alt="Карта"></a></figure>
+          <figure><a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a><a href="#"><img src="img/map.png" width="1440" height="416" alt="Карта"></a></figure>
         </section>
     </main>
     <footer>
       <div>
         <ul>
-          <li><a href='#'>Вконтакте</a></li>
-          <li><a href='#'>Фейсбук</a></li>
-          <li><a href='#'>Инстаграм</a></li>
+          <li><a href='#'><img src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК">Вконтакте</a></li>
+          <li><a href='#'><img src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК">Фейсбук</a></li>
+          <li><a href='#'><img src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК">Инстаграм</a></li>
         </ul>
       </div>
       <div>
