--- a/САЙТ NERDS/catalog.html
+++ b/САЙТ NERDS/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html"><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a>
+      <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
         <ul>
           <li><a href="info.html">Студия</a></li>
           <li><a href="clients.html">Клиенты</a></li>
@@ -37,35 +37,41 @@
           <li>ПО ТИПУ</li>
           <li>ПО НАЗВАНИЮ</li>
         </ul>
-          <button type="button"><img src="img/button-down" width="100" height="100" alt="Кнопка вниз"/></button>
-          <button type="button"><img src="img/button-up" width="100" height="100" alt="Кнопка вверх "/></button>
+          <button type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Кнопка вниз"/></button>
+          <button type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Кнопка вверх "/></button>
       </section>
       <section>
         <h2>СЕТКА:</h2>
           <ul>
-            <li>Адаптивная</li>
-            <li>Фиксированная</li>
-            <li>Резиновая</li>
+            <li><img src="img/radio-on.svg" width="25" height="25" alt="radio-on"/>Адаптивная</li>
+            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Фиксированная</li>
+            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Резиновая</li>
           </ul>
             <h2>ОСОБЕННОСТИ:</h2>
           <ul>
-            <li>Слайдер</li>
-            <li>Блок преимуществ</li>
-            <li>Новости</li>
-            <li>Галерея</li>
-            <li>корзина</li>
+            <li><img src="img/checkbox-on.svg" width="27" height="23" alt="checkbox-on"/>Слайдер</li>
+            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>Блок преимуществ</li>
+            <li><img src="img/checkbox-on.svg" width="27" height="23" alt="checkbox-on"/>Новости</li>
+            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>Галерея</li>
+            <li><img src="img/checkbox-off.svg" width="23" height="23" alt="checkbox-off"/>корзина</li>
           </ul>
             <button type="button">Показать</button>
         </section>
         <section>
           <h2>Шаблоны</h2>
             <ul>
-              <li><a href="catalog-item"><img src="img/product-1" width="100" height="100" alt="сайт SEDONA " /></a></li>
-              <li><a href="catalog-item"><img src="img/product-2" width="100" height="100" alt="сайт PINK " /></a></li>
-              <li><a href="catalog-item"><img src="img/product-3" width="100" height="100" alt="сайт BORODINSKI " /></a></li>
-              <li><a href="catalog-item"><img src="img/product-4" width="100" height="100" alt="сайт MISHKA " /></a></li>
-              <li><a href="catalog-item"><img src="img/product-5" width="100" height="100" alt="сайт УЧЕБА " /></a></li>
-              <li><a href="catalog-item"><img src="img/product-6" width="100" height="100" alt="сайт КВАСТ " /></a></li>
+              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
+                  <a href="catalog-item"><img src="img/img-sedona-jpg.png" width="360" height="576" alt="сайт SEDONA " /></a></li>
+              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
+                <a href="catalog-item"><img src="img/img-pink-jpg.png" width="360" height="576" alt="сайт PINK " /></a></li>
+              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
+                <a href="catalog-item"><img src="img/img-barbershop-jpg.png" width="360" height="576" alt="сайт BORODINSKI " /></a></li>
+              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
+                <a href="catalog-item"><img src="img/img-mishka-jpg.png" width="360" height="576" alt="сайт MISHKA " /></a></li>
+              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
+                <a href="catalog-item"><img src="img/img-aplus-jpg.png" width="360" height="576" alt="сайт УЧЕБА " /></a></li>
+              <li><img src="img/browser.svg" width="360" height="40" alt="browser "/>
+                <a href="catalog-item"><img src="img/img-kvast-jpg.png" width="360" height="576" alt="сайт КВАСТ " /></a></li>
             </ul>
             <ul>
               <li><a>1</a></li>
@@ -85,20 +91,20 @@
         </section>
         <section>
           <h2 hidden>Карта</h2>
-            <figure><a href="#"><img src="img/Map.svg" width="100" height="100" alt="Карта"></a></figure>
+            <figure><a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a><a href="#"><img src="img/map.png" width="1440" height="416" alt="Карта"></a></figure>
         </section>
     </main>
     <footer>
-      <div>
-        <ul>
-          <li><a href='#'>Вконтакте</a></li>
-          <li><a href='#'>Фейсбук</a></li>
-          <li><a href='#'>Инстаграм</a></li>
-        </ul>
-      </div>
-      <div>
-        <p>Давайте дружить, зто выгодно!<br>Скидка  10% для друзей из социальных сетей.</p>
-      </div>
-    </footer>
+        <div>
+          <ul>
+            <li><a href='#'><img src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК">Вконтакте</a></li>
+            <li><a href='#'><img src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК">Фейсбук</a></li>
+            <li><a href='#'><img src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК">Инстаграм</a></li>
+          </ul>
+        </div>
+        <div>
+          <p>Давайте дружить, зто выгодно!<br>Скидка  10% для друзей из социальных сетей.</p>
+        </div>
+      </footer>
 </body>
 </html>
