Личный проект: начинаем готовить графику

--- a/САЙТ NERDS/index.html
+++ b/САЙТ NERDS/index.html
@@ -1,86 +1,108 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Веб-студия Nerds</title>
+    <title>студия Nerds</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href=""><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a>
-        <ul>
-          <li><a href="info.html">Студия</a></li>
-          <li><a href="clients.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <ul>
-                <li>
-                   <button type="button">Корзина</button>
-                 </li>
-              </ul>
-        </nav>
-    </header>
-    <main>
-        <h1 hidden>Веб студия NERDS</h1>
-        <section>
-            <h2 hidden>ПРОДУКТЫ</h2>
-            <ul>
-                <li>
-                    <h2>ВЕБ-САЙТЫ</h2>
-                    <p>Мир никогда не будет прежним когда вы увидите ваш сайт!</p>
-                    <button type="button">Заказать</button>
-                </li>
-                <li>
-                    <h2>Приложения</h2>
-                    <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-                    <button type="button">Заказать</button>
-                </li>
-                <li>
-                    <h2>Презентации</h2>
-                    <p>Вы даже не подозреваете на сколько вы изумительны!</p>
-                    <button type="button">Заказать</button>
-                </li>
-        </ul>
+  <header>
+    <nav>
+      <a href=""><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Nerds"></a>
+       <ul>
+        <li><a href="info.html">Студия</a></li>
+        <li><a href="clients.html">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a><img src="img/basket-icon.svg" width="15" height="15" alt="Иконка корзины"></a></li>
+        <li><button type="button">Корзина</button></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1 hidden>Веб студия NERDS</h1>
+      <section>
+        <h2 hidden>Cлайдер</h2>
+        <a><img src="img/slide-picture.png" width="698" height="413" alt="Слайд1"></a>
+          <h2>Долго, дорого, скрупулезно.</h2>
+           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+             <a href="#">Узнать больше</a>
+      </section>
+      <section>
+        <h2 hidden>ПРОДУКТЫ</h2>
+          <ul>
+            <li><img src="img/advantage-picture-red.png" width="300" height="146" alt="Веб-сайты">
+              <h2>ВЕБ-САЙТЫ</h2>
+                <p>Мир никогда не будет прежним когда вы увидите ваш сайт!</p>
+                  <button type="button">Заказать</button></li>
+            <li><img src="img/advantage-picture-green.png" width="300" height="146" alt="Приложения">
+              <h2>ПРИЛОЖЕНИЯ</h2>
+                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                  <button type="button">Заказать</button></li>
+            <li><img src="img/advantage-picture-yellow.png" width="300" height="146" alt="Презентации">
+              <h2>ПРЕЗЕНТАЦИИ</h2>
+                <p>Вы даже не подозреваете на сколько вы изумительны!</p>
+                  <button type="button">Заказать</button></li>
+          </ul>
         </section>
         <section>
-                <h2 hidden>О НАС</h2>
-                <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
-                <p>Исповедуем принципы минимализма и чистоты.Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-               <ul>
-                    <li>Выполняем заказы на разработку</li>
+          <h2 hidden>О НАС</h2>
+            <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
+              <p>Исповедуем принципы минимализма и чистоты.Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+                <h3>Выполняем заказы на разработку</h3>
+                  <ul>
                     <li>Веб-сайтов любой сложности</li>
                     <li>Мобильных приложений для iOS и Android</li>
                     <li>Слайд-шоу и видео для корпоративных презентаций</li>
+                  </ul>
+        </section>
+        <section>
+          <h2 hidden>Преимущества</h2>
+            <figure><a href="index.html"><img src="img/nerds-picture.png" width="360" height="208" alt="Логотип студии Nerds"></a></figure>
+              <p>C 2004 года любим точность во всем:</p>
+                <ul>
+                  <li>146% <br> Уровень самоотдачи</li>
+                  <li>100% <br> Соблюдение сроков</li>
+                  <li>50%  <br> Минимальная предоплата</li>
                 </ul>
         </section>
         <section>
-            <h2 hidden>Преимущества</h2>
-            <figure>
-            <a href="index.html"><img src="img/index-logo.svg" width="368" height="204" alt="Логотип студии Nerds"></a></figure>
-            <p>C 2004 года любим точность во всем:</p>
+          <h2 hidden>Наши проекты</h2>
             <ul>
-                <li>146% <br> Уровень самоотдачи</li>
-                <li>100% <br> Соблюдение сроков</li>
-                <li>50%  <br> Минимальная предоплата</li>
+              <li><a href="#"><img src="img/htmlacademy-logo.png" width="199" height="68" alt="Логотип HTML-Academy"></a></li>
+              <li><a href="#"><img src="img/borodinski-logo.png" width="209" height="90" alt="Логотип Borodinski"></a></li>
+              <li><a href="#"><img src="img/pink-logo.png" width="185" height="52" alt="Логотип Pink"></a></li>
+              <li><a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Логотип Mishka"></a></li>
             </ul>
+        </section>
+        <section>
+          <h2 hidden>Наши контакты</h2>
+            <h3>NERDS DISIGN STUDIO</h3>
+              <ul>
+                <li>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</li>
+                <li>тел. +7(812)275-75-75</li>
+              </ul>
+                <button type="button">Напишите нам</button>
+        </section>
+        <section>
+          <h2 hidden>Карта</h2>
+          <figure><a href="#"><img src="img/map-marker-png.png" width="231" height="190" alt="Маркер"></a><a href="#"><img src="img/map.png" width="1440" height="416" alt="Карта"></a></figure>
         </section>
     </main>
     <footer>
-        <div>
+      <div>
         <ul>
-            <li><a href='#'>Вконтакте</a></li>
-            <li><a href='#'>Фейсбук</a></li>
-            <li><a href='#'>Инстаграм</a></li>
+          <li><a href='#'><img src="img/vk-icon.png" width="26" height="15" alt="Иконка ВК">Вконтакте</a></li>
+          <li><a href='#'><img src="img/fb-icon.png" width="12" height="22" alt="Иконка ВК">Фейсбук</a></li>
+          <li><a href='#'><img src="img/insta-icon.png" width="21" height="21" alt="Иконка ВК">Инстаграм</a></li>
         </ul>
-        </div>
-        <div>
-        <p>Давайте дружить, зто выгодно! <br>
-        Скидка  10% для друзей из социальных сетей.</p>
-        </div>
+      </div>
+      <div>
+        <p>Давайте дружить, зто выгодно!<br>Скидка  10% для друзей из социальных сетей.</p>
+      </div>
     </footer>
-  
 </body>
 </html>
