Личный проект: продолжаем разметку

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
         <section>
           <h2>Напишите нам</h2>
-          <!--<form action="https://echo.htmlacademy.ru" method="post">
+          <form action="https://echo.htmlacademy.ru" method="post">
             <p>
               <label for="your-name">Ваше имя:</label>
               <input id="your-name" type="text" name="name" value="" placeholder="Нёрд">
@@ -103,7 +103,7 @@
             </p>
             <button type="submit">Отправить</button>
             <button type="button"><img src="img/close-cross.svg" width="21" height="21" alt="Кнопка закрыть"></button>
-          </form>-->
+          </form>
         </section>
         <section>
           <h2 hidden>Карта</h2>
