Личный проект: продолжаем разметку

--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
       </section>
       <section>
         <h2 hidden>СЕТКА:</h2>
-          <!--<form method="get" action="https://echo.htmlacademy.ru">
+          <form method="get" action="https://echo.htmlacademy.ru">
             <legend>СЕТКА:</legend>
             <ul>
               <li><input type="radio" name="adaptive-grid" id="filter-adaptive-grid" checked>
@@ -53,9 +53,9 @@
                 <label for="filter-adaptive-site">Резиновая</label></li>-->
             <!--<img src="img/radio-on.svg" width="25" height="25" alt="radio-on"/>Адаптивная</li>
             <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Фиксированная</li>
-            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Резиновая</li>
+            <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Резиновая</li>-->
           </ul>
-        </form>-->
+        </form>
             <h2 hidden>ОСОБЕННОСТИ:</h2>
               <form method="get" action="https://echo.htmlacademy.ru">
                 <legend>ОСОБЕННОСТИ:</legend>
