Личный проект: завершаем разметку

--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
               <li><input type="radio" name="fix-grid" id="filter-fix-grid">
                 <label for="filter-adaptive-site">Фиксированная</label></li>
               <li><input type="radio" name="rubber-grid" id="filter-rubber-grid">
-                <label for="filter-adaptive-site">Резиновая</label></li>-->
+                <label for="filter-adaptive-site">Резиновая</label></li>
             <!--<img src="img/radio-on.svg" width="25" height="25" alt="radio-on"/>Адаптивная</li>
             <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Фиксированная</li>
             <li><img src="img/radio-off.svg" width="25" height="25" alt="radio-off"/>Резиновая</li>-->
